--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>GoogleClone</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://seeklogo.com/images/N/new-google-favicon-logo-5E38E037AF-seeklogo.com.png">
 </head>
 <body>
   <app-root></app-root>
